[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reconforge"
version = "3.4.0"
description = "Network Discovery and Security Assessment Platform"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Humair Ali" }]
requires-python = ">=3.9"
keywords = ["security", "recon", "nmap", "metasploit", "network", "scanning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.31.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "python-nmap>=0.7.1",
    "rich>=13.7.0",
    "dnspython>=2.6.1",
    "paramiko>=3.4.0",
    "scapy>=2.5.0",
    "mac-vendor-lookup>=0.1.12",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
msf = ["pymsfrpc>=0.1.3"]
dev = ["pytest>=7.0", "pytest-cov", "black", "isort", "mypy"]

[project.urls]
Homepage = "https://github.com/humairali/ReconForge"
Issues   = "https://github.com/humairali/ReconForge/issues"

[project.scripts]
reconforge = "reconforge.cli:main"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
reconforge = ["static/css/*.css", "static/js/*.js", "static/*.html"]
